[package]
name = "the-swarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.2.1", features = ["derive"] }
futures = "0.3"
libp2p = { version = "0.51.2", features = ["serde", "tcp", "mdns", "tokio", "async-std", "macros", "websocket", "noise", "mplex", "yamux", "dns"] }
# Add integration of actual consensus
# rust-hashgraph = { git = "..." }
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
void = "1.0.2"
serde = "1.0.159"
serde_json = "1.0.95"
