[package]
name = "the-swarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bincode = "1.3.3"
clap = { version = "4.2.1", features = ["derive"] }
futures = "0.3"
libp2p = { version = "0.51.2", features = ["serde", "tcp", "mdns", "tokio", "async-std", "macros", "websocket", "noise", "mplex", "yamux", "dns"] }
libp2p-request-response = "0.24.1"
# Add integration of actual consensus
rust-hashgraph = { path = "../rust-hashgraph" }
rand = "0.8.5"
thiserror = "1.0"
tokio = { version = "1.27.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
console-subscriber = "0.1.9"
void = "1.0.2"
serde = "1.0.159"
serde_json = "1.0.95"
pin-project-lite = "0.2.9"
serde-big-array = "0.5.1"
blake2 = "0.10.6"
reed-solomon-erasure = "6.0.0"
easy-repl = "0.2.1"
tokio-util = "0.7.8"
anyhow = "1.0.71"

[features]
gen-input = []
console = []
